Switch debounce counters to a unified 'sensitivity' setting, make clicktofullscreen always visible but sometimes nonoperational. prevent clicks on the webcam/videos. force play on videos if they are paused, handle force video sync poor behavior on loop.

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ canvas {
 	position: absolute;
 	right: 0;
 	bottom: 0;
+	pointer-events: none;
 }
 
 details {
@@ -35,6 +36,10 @@ details {
 	position: absolute;
 	top: 0;
 	right: 0;
+}
+
+#videos {
+	pointer-events: none;
 }
 
 .cb_video {
